# proyecto2ia

./: .gitignore  README.md  make_notebook.py  proyecto2.ipynb  pyproject.toml  requirements.txt  task1_csp.py  task2_minimax.py  task3_expectiminimax.py
tests/: test_task1.py  test_task2.py  test_task3.py
